<resources>
    <string name="app_name">ZiBazi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialogTitle">بازی رو شروع کنیم؟</string>
    <string name="startGame">شروع بازی</string>
    <string name="exitGame">بازگشت</string>
    <string name="score">0</string>
    <string name="fly">می پره</string>
    <string name="notFly">نمی پره</string>
    <string name="goForward">رد کردن آموزش</string>
</resources>