<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/yellow"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="30dp"
        android:background="@color/yellow"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialogTitle"
            android:textColor="@color/crimson"
            android:gravity="center"
            android:textStyle="bold" />

        <Button
            android:id="@+id/startBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/startGame"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:backgroundTint="#0ebb94"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/exitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#f80"
            android:text="@string/exitGame"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_gravity="center"/>
    </LinearLayout>
</LinearLayout>
