<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#379E30"
    tools:context=".fragments.HomeFragment">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/pause"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/LLScore"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/orange"
        android:background="@drawable/circular_shape"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/score"
            android:textColor="@color/crimson"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:src="@drawable/brain" />

        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <VideoView
        android:id="@+id/moviePlayer"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LLScore"/>


    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#fc0"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/fly"
        style="bold"
        android:paddingStart="30dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="30dp"
        android:textColor="@color/crimson"
        android:textSize="30sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/moviePlayer" />

    <com.google.android.material.button.MaterialButton

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#fc0"
        android:paddingStart="30dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/notFly"
        style="bold"
        android:textColor="@color/crimson"
        android:textSize="30sp"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/moviePlayer" />


    <Button
        android:id="@+id/goForwardBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="#87278E"
        android:text="@string/goForward"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>